All projects moved to new jdeeco successfully(with jpf ignored).